# DeckOracle

./: .gitignore  INTEGRATION.md  Makefile  README.md  docker-compose.yml  features.md  launch.ps1
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  backend.yml  ci.yml  frontend.yml  security.yml
.husky/: pre-commit
backend/: .env.example  API.md  Cargo.toml  Dockerfile  Dockerfile.dev  IMPLEMENTATION_GUIDE.md  Makefile  README.md  dev.ps1  simple-test.ps1  test-api.ps1
backend/api-collection/: DeckOracle_Insomnia_Collection.json
backend/src/: main.rs  state.rs
backend/src/config/: mod.rs
backend/src/handlers/: ai.rs  auth.rs  card.rs  card_pagination.patch  deck.rs  folder.rs  health.rs  import_export.rs  mod.rs  progress.rs  search.rs  stats_stub.rs  study.rs  study_updated.patch
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: ai.rs  import_export.rs  mod.rs
backend/src/services/: auth.rs  card.rs  deck.rs  folder.rs  import_export.rs  mod.rs  search.rs  study.rs  vertex_ai.rs
backend/src/utils/: error.rs  mod.rs  pagination.rs
backend/tests/: api_tests.rs  deck_csv_tests.rs  folder_tests.rs  study_session_tests.rs
backend/tests/common/: mod.rs
docs/: architecture.md
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
frontend/e2e/: user-flow.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddCardModal.tsx  AiCardGenerator.tsx  AiDeckCreator.tsx  BulkCardCreator.tsx  CardFlipDemo.test.tsx  CardFlipDemo.tsx  ComingSoonBadge.tsx  CreateDeckModal.tsx  EditCardModal.tsx  EditDeckModal.tsx  ErrorBoundary.tsx  ImportExport.jsx  ImportExportModal.tsx  LoadingSkeletons.tsx  ProtectedRoute.tsx
frontend/src/components/study/: StudySession.tsx
frontend/src/config/: featureFlags.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useToggle.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: DeckListPage.tsx  DeckViewPage.tsx  HomePage.tsx  LoginPage-old.tsx  LoginPage.tsx  ProgressDashboard.css  ProgressDashboard.tsx  RegisterPage-old.tsx  RegisterPage.tsx  StudyPage.tsx
frontend/src/services/: authService.ts
frontend/src/store/: index.ts
frontend/src/store/services/: api.ts
frontend/src/styles/: ImportExport.css  study.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: cn.ts  errorHandling.ts
