[package]
name = "deckoracle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV processing
csv = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing
axum-test = "16"
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1"
once_cell = "1"
