[package]
name = "deckoracle-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "bigdecimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CSV processing
csv = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Async traits
async-trait = "0.1"

# AI & ML
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.22"

# Document processing
lopdf = "0.34"
docx-rs = "0.4"
calamine = "0.26"

# WebSocket support
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Background tasks
tokio-cron-scheduler = "0.11"

# Metrics & monitoring
prometheus = "0.13"

# Machine learning (optional)
# candle-core = { version = "0.7", optional = true }
# candle-transformers = { version = "0.7", optional = true }
# ort = { version = "2.0", optional = true }  # onnxruntime

[dev-dependencies]
# Testing
axum-test = "16"
tokio-test = "0.4"
wiremock = "0.6"
pretty_assertions = "1"
once_cell = "1"
